changed gitignore to ignore all venv* directories

--- a/python_review/basics/test.ipynb
+++ b/python_review/basics/test.ipynb
@@ -30,10 +30,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "9d05aaa0",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd22b245",
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "print(\"hello world\")"
+   ]
   }
  ],
  "metadata": {
